# Mentorhub

./: .gitignore
BasicCalculator/: CMakeLists.txt  Dockerfile  README.md  docker-compose.yml  main.cpp  run.sh
BasicCalculator/include/: calculator.h
BasicCalculator/src/: calculator.cpp
BasicDB/: main.cpp
BasicDB/gui_designs/: AddGoalDialog.ui  GoalsWindow.ui  ReadingListDetailsWindow.ui  ReadingListsWindow.ui  RegisterWindow.ui
BasicDB/include/database/: goalsManager.hpp  readingListsManager.hpp
BasicDB/include/gui/: booksWindow.hpp  loginWindow.hpp  mainMenuWindow.hpp  readingListDetailsWindow.hpp  readingListsWindow.hpp  registerWindow.hpp
BasicDB/json/: books.json
BasicDB/src/database/: bookManager.cpp  goalsManager.cpp  readingListsManager.cpp  userManager.cpp
BasicDB/src/gui/: addGoalDialog.cpp  booksWindow.cpp  loginWindow.cpp  readingListsWindow.cpp  registerWindow.cpp
PersonalLibrary/: CMakeLists.txt  main.cpp
PersonalLibrary/application/: CMakeLists.txt
PersonalLibrary/application/user/: AuthenticateUser.cpp  AuthenticateUser.hpp  DeleteUser.cpp  DeleteUser.hpp  RegisterUser.cpp  RegisterUser.hpp  UpdateUserName.cpp  UpdateUserName.hpp
PersonalLibrary/domains/: CMakeLists.txt
PersonalLibrary/domains/user/: IUserRepository.hpp  PasswordHasher.hpp  User.hpp  dummy.cpp
PersonalLibrary/infrastructure/: CMakeLists.txt
PersonalLibrary/infrastructure/config/: EnvLoader.cpp  EnvLoader.hpp
PersonalLibrary/infrastructure/crypto/: SodiumPasswordHasher.cpp  SodiumPasswordHasher.hpp
PersonalLibrary/infrastructure/db/: PostgreDBManager.cpp  PostgreDBManager.hpp
PersonalLibrary/infrastructure/persistence/: PostgreSQLUserRepository.cpp  PostgreSQLUserRepository.hpp
PersonalLibrary/tests/: CMakeLists.txt
PersonalLibrary/tests/mocks/: InMemoryUserRepository.hpp  dummy.cpp
PersonalLibrary/ui/: CMakeLists.txt
PersonalLibrary/ui/login/: CMakeLists.txt  LoginWindow.cpp  LoginWindow.hpp
Week 1/BasicDB/: CMakeLists.txt  main.cpp
Week 1/BasicDB/gui_designs/: BooksWindow.ui  GoalsWindow.ui  LoginWindow.ui  MainMenuWindow.ui  ReadingListsWindow.ui
Week 1/BasicDB/include/: user.hpp
Week 1/BasicDB/include/database/: bookManager.hpp  dbManager.hpp  readingListsManager.hpp  userManager.hpp
Week 1/BasicDB/include/gui/: addBookDialog.hpp  addGoalDialog.hpp  goalsWindow.hpp  loginWindow.hpp  mainMenuWindow.hpp  readingListsWindow.hpp
Week 1/BasicDB/json/: reading_lists.json
Week 1/BasicDB/src/: user.cpp
Week 1/BasicDB/src/database/: bookManager.cpp  dbManager.cpp  readingListsManager.cpp  readingListsManager.hpp  userManager.cpp
Week 1/BasicDB/src/gui/: addBookDialog.cpp  booksWindow.cpp  goalsWindow.cpp  loginWindow.cpp  mainMenuWindow.cpp  readingListDetailsWindow.cpp  readingListsWindow.cpp  registerWindow.cpp
